--- a/sass/abstracts/_colours.scss
+++ b/sass/abstracts/_colours.scss
@@ -18,11 +18,11 @@ $steel: #60A1B8a2;
 $water: #2980EFa2;
 $basegreen: #49a55b;
 $accentyellow: #f7cb5adf;
-$primarygray: #92C494;
+$primarygreen: #92C494;
 // $primarygray: #d0d9e4;
 $secondarygray: rgb(242, 242, 242);
 // $dmprimarygray: #7d8c9d;
-$dmprimarygray: #538555;
+$dmprimarygreen: #538555;
 $dmsecondarygray: rgb(69, 69, 69);
 $darkbox: rgb(100, 100, 100);
 $graytext: rgb(175, 175, 175);
