--- a/sass/pages/_login-register.scss
+++ b/sass/pages/_login-register.scss
@@ -25,11 +25,11 @@
     margin-bottom: 10px;
 }
 
-#register-privacy-link {
+#register-privacy-link, #register-toc-link {
     text-decoration: underline;
 }
 
-#privacy-check-con {
+#privacy-check-con, #toc-check-con {
     margin-top: 15px;
 }
 
