--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -15,6 +15,9 @@ h3 {
 
 h4 {
     font-weight: 600;
+    &:first-of-type {
+        margin-top: 25px;
+    }
 }
 
 a {
@@ -54,6 +57,11 @@ a {
 .close-button {
     font-size: 30px;
     text-align: center;
+}
+
+ul {
+    padding-inline-start: 25px;
+    margin-block-start: 10px;
 }
 
 @media screen and (min-width: 428px) {
