--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -7,7 +7,7 @@ footer {
     padding-bottom: 10px;
     padding-left: 5px;
     padding-right: 5px;
-    background-color: c.$primarygray;
+    background-color: c.$primarygreen;
     a {
         margin-left: 5px;
         margin-right: 5px;
