--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -3,7 +3,7 @@
 header {
     display: flex;
     flex-direction: column;
-    background-color: c.$primarygray;
+    background-color: c.$primarygreen;
 }
 
 #theme-enable {
