--- a/sass/pages/_profile.scss
+++ b/sass/pages/_profile.scss
@@ -14,6 +14,8 @@
     border-radius: 100px;
     padding: 20px;
     background-color: #5a5a5af6;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+
 }
 
 #profile-image-con {
@@ -71,6 +73,7 @@
     display: none;
     border: 1px solid black;
     background-color: rgb(222, 222, 222);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 .profile-content-con {
@@ -108,7 +111,7 @@
     border-top-left-radius: 100px;
     border-top-right-radius: 100px;
     width: 100%;
-    background-color: c.$primarygray;
+    background-color: c.$primarygreen;
     overflow: hidden;
 }
 
