Password Reset Function
-Added a function for resetting a user's password retrieving their username
-Created tokens to generate during registration to ensure security of account
-Added links to login page for these functions
-Added a password confirmation during registration
-Updated the terms and conditions
-Updated the privacy policy
-Minor styling fixes

--- a/sass/components/_dark-styles.scss
+++ b/sass/components/_dark-styles.scss
@@ -54,11 +54,11 @@ select.dark-mode, .tab-selected.dark-mode {
     color: c.$graytext;
 }
 
-#rule-con.dark-mode, #suggest-con.dark-mode, #contact-con.dark-mode, #login-form-con.dark-mode, #register-form-con.dark-mode, #privacy-info-con.dark-mode, #toc-con.dark-mode {
+#rule-con.dark-mode, #suggest-con.dark-mode, #contact-con.dark-mode, #login-form-con.dark-mode, #register-form-con.dark-mode, #privacy-info-con.dark-mode, #toc-con.dark-mode, .forgot-form-con.dark-mode, #reset-password-form-con.dark-mode {
     border: 2px solid black;
     background-color: c.$darkbox;
     border-radius: 20px;
-    &:not(#suggest-con.dark-mode, #contact-con.dark-mode, #login-form-con.dark-mode, #register-form-con.dark-mode, #privacy-info-con.dark-mode) {
+    &:not(#suggest-con.dark-mode, #contact-con.dark-mode, #login-form-con.dark-mode, #register-form-con.dark-mode, #privacy-info-con.dark-mode, .forgot-form-con.dark-mode, #reset-password-form-con.dark-mode) {
         margin-top: 5px;
     }
 }
