--- a/sass/components/_common-styles.scss
+++ b/sass/components/_common-styles.scss
@@ -178,6 +178,10 @@ option:disabled {
     .select-list {
         width: 50%;
     }
+
+    button, input[type=submit] {
+        font-size: 16px;
+    }
 }
 
 img:not([alt]) {
