--- a/sass/abstracts/_colours.scss
+++ b/sass/abstracts/_colours.scss
@@ -18,16 +18,17 @@ $steel: #60A1B8a2;
 $water: #2980EFa2;
 $basegreen: #49a55b;
 $accentyellow: #f7cb5adf;
-$primarygreen: #92C494;
+$primarygreen: #cbedca;
 // $primarygray: #d0d9e4;
 $secondarygray: rgb(242, 242, 242);
 // $dmprimarygray: #7d8c9d;
-$dmprimarygreen: #538555;
+$dmprimarygreen: rgb(23, 63, 39);
 $dmsecondarygray: rgb(69, 69, 69);
 $darkbox: rgb(100, 100, 100);
 $graytext: rgb(175, 175, 175);
-$lightboxgreen: rgba(52, 90, 54, 0.975);
+$lightboxgreen: #1e4b31f8;
 $lightboxgray: #424242da;
+$textgreen: #4CA75A;
 // $primarygray: #6f7396;
 // $secondarygray: rgb(220, 220, 220);
 // $white: rgb(239, 239, 239)
