--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,3 +1,5 @@
+@use "../abstracts/colours" as c;
+
 p, a, li, option, select, label, button, input, textarea, h4 {
     font-family: "Public Sans", "Arial", sans-serif;
     font-weight: 400;
@@ -48,6 +50,11 @@ a {
     font-size: 18px;
 }
 
+#name-link {
+    font-size: 22px;
+    font-weight: 700;
+}
+
 .pokemon-name {
     text-align: center;
     margin-left: 5px;
@@ -62,6 +69,29 @@ a {
 ul {
     padding-inline-start: 25px;
     margin-block-start: 10px;
+}
+
+header, footer {
+    a, span, p, li {
+        color: c.$textgreen!important;
+    }
+}
+
+header {
+    a, span, p, li {
+        font-weight: 700;
+    }
+}
+
+footer {
+    a, span, p {
+        font-weight: 500;
+    }
+}
+
+.page-title {
+    font-size: 18px;
+    font-weight: bold;
 }
 
 @media screen and (min-width: 428px) {
@@ -97,6 +127,11 @@ ul {
     h3 {
         font-size: 17px;
     }
+
+    .page-title {
+        font-size: 20px;
+        font-weight: bold;
+    }
 }
 
 @media screen and (min-width: 1200px) {
@@ -114,5 +149,10 @@ ul {
 
     .upvote, .vote-count {
         font-size: 28px;
+    }
+
+    .page-title {
+        font-size: 22px;
+        font-weight: bold;
     }
 }
