--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -414,7 +414,7 @@
     width: 80%;
     left: 10%;
     height: 97.5%;
-    background-color: rgba(52, 90, 54, 0.975);
+    background-color: rgba(30,75,49,.9725490196);
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     h3 {
         text-align: center;
@@ -427,6 +427,10 @@
 
     ul {
         margin-bottom: 25px;
+    }
+
+    li {
+        margin-bottom: 5px;
     }
 
     &::-webkit-scrollbar {
@@ -512,6 +516,14 @@
 
 #home-error-message {
     display: none;
+}
+
+.inactive-link:hover {
+    text-decoration: none!important;
+}
+
+.external-icon {
+    width: 17.5px;
 }
 
 @media screen and (min-width: 428px) {
