--- a/sass/abstracts/_colours.scss
+++ b/sass/abstracts/_colours.scss
@@ -25,7 +25,7 @@ $secondarygray: rgb(242, 242, 242);
 $dmprimarygreen: rgb(23, 63, 39);
 $dmsecondarygray: rgb(69, 69, 69);
 $darkbox: rgb(100, 100, 100);
-$graytext: rgb(175, 175, 175);
+$graytext: #b7b7b7;
 $lightboxgreen: #1e4b31f8;
 $lightboxgray: #424242da;
 $textgreen: #4CA75A;
