--- a/sass/pages/_suggestions.scss
+++ b/sass/pages/_suggestions.scss
@@ -36,7 +36,7 @@
 }
 
 #suggest-con {
-    padding-top: 20px;
+    padding-top: 20px!important;
     display: none;
     align-items: center;
     flex-direction: column;
